--- a/student.ipynb
+++ b/student.ipynb
@@ -7,10 +7,10 @@
     "## Final Project Submission\n",
     "\n",
     "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
+    "* Student name: Annbellah Nduta\n",
+    "* Student pace: self paced \n",
     "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
+    "* Instructor name: Asha Deen\n",
     "* Blog post URL:\n"
    ]
   },
