--- a/student.ipynb
+++ b/student.ipynb
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1518,6 +1518,7 @@
    "source": [
     "sns.scatterplot(x='production_budget', y='worldwide_gross', data=movie_budgets_df, color='red')\n",
     "plt.title('Correlation between production budget and worldwide gross')\n",
+    "plt.savefig('scatterplot.png')  # Saving the plot as scatterplot.png\n",
     "plt.show()"
    ]
   },
