--- a/student.ipynb
+++ b/student.ipynb
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1561,6 +1561,8 @@
     "plt.title('Histogram of production_budget')\n",
     "plt.xlabel('production_budget')\n",
     "plt.ylabel('Count')\n",
+    "\n",
+    "plt.savefig('histogram.png') \n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
