--- a/student.ipynb
+++ b/student.ipynb
@@ -18,8 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview\n",
-    " As a data scientist, I have been assigned with the task of assisting Microsoft in deciding which films to create. With me,I have movie datasets from Box Office Mojo, IMDb, Rotten Tomatoes, The Movie Database, and The Numbers that I will use to come up with insights ensuring success of Microsoft in the entertainment industry."
+    "## Overview"
    ]
   },
   {
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +627,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[99], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Checked to see the datatype, number of columns and rows of the movie_basics table\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m movie_basics_table\u001b[38;5;241m.\u001b[39minfo()\n",
+      "Cell \u001b[1;32mIn[100], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Checked to see the datatype, number of columns and rows of the movie_basics table\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m movie_basics_table\u001b[38;5;241m.\u001b[39minfo()\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'info'"
      ]
     }
