--- a/student.ipynb
+++ b/student.ipynb
@@ -18,14 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Business Understanding\n"
+    "## Overview\n",
+    "This project examines data related to movie ratings and audience popularity to offer suggestions to Microsoft, which is planning to launch its own movie studio. As a newcomer in this field, Microsoft seeks guidance on which movie genres resonate well with audiences. The analysis primarily relies on IMDb datasets covering movies from 2010 to 2019 including, genres, average user rating, and the number of users who voted on each movie, and a movie budget dataset containing details about domestic and worldwide gross earnings along with production budgets. The findings recommend prioritizing investments in comedies and animated films and provide insights into budget allocation strategies.\n"
    ]
   },
   {
