--- a/student.ipynb
+++ b/student.ipynb
@@ -2642,6 +2642,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the bar chart, its evident that Avatar had the highest production budget and still had massive profits from 2009 to 2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 233,
    "metadata": {},
