--- a/student.ipynb
+++ b/student.ipynb
@@ -3889,9 +3889,7 @@
     "\n",
     "I began with data exploration and cleaning to ensure data usability. Descriptive analysis followed, including visualizations to grasp distributions and correlations among variables.\n",
     "\n",
-    "My findings highlighted Action as the most profitable genre, with Drama and Comedy following closely. However, in terms of popularity, Comedy emerged as the top genre, trailed by Action and Drama.\n",
-    "\n",
-    "Moreover, I uncovered a positive relationship between movie budgets and revenues, indicating that higher-budget films generally earned more. Interestingly, movie runtime showed minimal influence on revenue.\n",
+    "My findings highlighted Action as the most profitable genre, with Drama and Comedy following closely.Moreover, I uncovered a positive relationship between movie budgets and revenues, indicating that higher-budget films generally earned more. Interestingly, movie runtime showed minimal influence on revenue.\n",
     "\n",
     "Microsoft should also consider scheduling movie releases for the months of May, June, and July. These months have consistently shown the highest profit margins. However, the underlying reasons behind the increased profits during these specific months require deeper investigation.\n",
     "\n",
