--- a/student.ipynb
+++ b/student.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview\n",
+    "## Business Understanding\n",
     "This project examines data related to movie ratings and audience popularity to offer suggestions to Microsoft, which is planning to launch its own movie studio. As a newcomer in this field, Microsoft seeks guidance on which movie genres resonate well with audiences. The analysis primarily relies on IMDb datasets covering movies from 2010 to 2019 including, genres, average user rating, and the number of users who voted on each movie, and a movie budget dataset containing details about domestic and worldwide gross earnings along with production budgets. The findings recommend prioritizing investments in comedies and animated films and provide insights into budget allocation strategies.\n"
    ]
   },
@@ -3884,7 +3884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n",
+    "## Conclusion\n",
     "In this project, I delved into movie industry data to understand the financial and popularity aspects of different genres. Utilizing Python along with pandas, matplotlib, and Seaborn, I conducted thorough data analysis.\n",
     "\n",
     "I began with data exploration and cleaning to ensure data usability. Descriptive analysis followed, including visualizations to grasp distributions and correlations among variables.\n",
