--- a/student.ipynb
+++ b/student.ipynb
@@ -3889,9 +3889,10 @@
     "\n",
     "I began with data exploration and cleaning to ensure data usability. Descriptive analysis followed, including visualizations to grasp distributions and correlations among variables.\n",
     "\n",
-    "My findings highlighted Action as the most profitable genre, with Drama and Comedy following closely.Moreover, I uncovered a positive relationship between movie budgets and revenues, indicating that higher-budget films generally earned more. Interestingly, movie runtime showed minimal influence on revenue.\n",
-    "\n",
-    "Microsoft should also consider scheduling movie releases for the months of May, June, and July. These months have consistently shown the highest profit margins. However, the underlying reasons behind the increased profits during these specific months require deeper investigation.\n",
+    "My findings highlighted the following;\n",
+    "1. Action as the most profitable genre, with Drama and Comedy following closely.\n",
+    "2. There was a  positive relationship between movie budgets and revenues, indicating that higher-budget films generally earned more. Interestingly, movie runtime showed minimal influence on revenue.\n",
+    "3. Microsoft should also consider scheduling movie releases for the months of May, June, and July. These months have consistently shown the highest profit margins. However, the underlying reasons behind the increased profits during these specific months require deeper investigation.\n",
     "\n",
     "The current analysis provides a preliminary understanding of the movie industry but is not definitive. It offers a broad overview that can guide initial insights. However, for Microsoft to consider implementing the recommendations from this analysis, further in-depth analysis is necessary, along with the acquisition of additional data."
    ]
